<resources>
    <string name="app_name">Task Planner</string>
    <string name="welcome">Welcome</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? sign up</string>
    <string name="log_in">Log In</string>
    <string name="add_image">add image</string>
    <string name="enter_username">Enter Username</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="profession">Job</string>
    <string name="other">Other…</string>
    <string name="txt_i_am_a">I am a/an…\u0020</string>
    <string name="add">add</string>
    <string name="txt_add_my">Add My \u0020</string>
    <string name="sign_up">Sign Up</string>
    <string name="current_tasks">Current Tasks</string>
    <string name="my_projects">My Projects</string>
    <string name="please_fill_all_fields">Please Fill All Fields</string>
    <string name="please_enter_valid_email">Please Enter Valid Email</string>
    <string name="ok">OK</string>
    <string name="task_planner">Task Planner</string>
    <string name="app_need_this_permission">App needs this permission</string>
    <string name="txt_please_choose_image">Please Choose Image</string>
    <string name="create_new_project">Create New Project</string>
    <string name="project_title">Project Title</string>
    <string name="project_description">Project Description</string>
    <string name="end">End</string>
    <string name="end_time">end time</string>
    <string name="start_time">start time</string>
    <string name="start_time_fab_desc">start_time_fab_desc</string>
    <string name="end_time_fab_desc">end time fab desc</string>
    <string name="time_picker_fab_desc">time picker fab desc</string>
    <string name="please_choose_estimate_time">Please choose estimate time</string>
    <string name="save">Save</string>
    <string name="txt_estimate_start_date">estimate start date \n%1$s</string>
    <string name="txt_estimate_end_date">estimate end date \n%1$s</string>
    <string name="you_have_not_projects">You Have Not Projects</string>
    <string name="_0">0</string>
    <string name="todo">ToDo</string>
    <string name="done">Done</string>
    <string name="in_progress">In Progress</string>
    <string name="edit_project">Edit Project</string>
    <string name="add_task">Add Task</string>
    <string name="submit">Submit</string>
    <string name="delete_project">Delete Project</string>
    <string name="successfully_edited_project">successfully edited project info</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="create_new_task">Create New Task</string>
    <string name="please_choose_valid_start_and_end_dates">Please choose valid start and end dates</string>
    <string name="start_time_of_task_is_less_than_the_start_time_of_the_project">Start time of  task is less than the start time of project,try again</string>
    <string name="end_time_of_task_is_more_than_end_time_of_project">End date of task is more than end date of project, try again</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
</resources>