<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/login_fragment_scene"
    tools:context=".presentation.authorization.login_screen.LoginFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/view_background_for_screen"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view"

        app:srcCompat="@drawable/ic_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textWelcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/welcome"
        android:textColor="@color/bg_blue"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/enter_email"
        android:textColorHint="@color/bg_blue"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/bg_blue"
        app:hintTextColor="@color/bg_blue"
        app:layout_constraintTop_toBottomOf="@id/textWelcomeTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/bg_blue"
            android:textCursorDrawable="@drawable/cursor_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/enter_password"
        android:textColorHint="@color/bg_blue"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/bg_blue"
        app:hintTextColor="@color/bg_blue"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/bg_blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/bg_blue"
            android:textCursorDrawable="@drawable/cursor_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/bg_blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logInButton"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/login_button_background"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTextView"
        app:layout_constraintWidth_percent="0.45" />
</androidx.constraintlayout.motion.widget.MotionLayout>